# trace-crs-chatbot

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  chainlit.md  config.py  constants.py  pyproject.toml  requirements.txt  test_firestore.py
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.firebase/: hosting.cHVibGlj.cache
analysis/notebooks/: eda-responses.ipynb
analysis/src/: analyze_feedback.py  city_diversity.py  combine_collections.py  get_data.py  persona_explanation_correlation.py  plot_utils.py  semantic_sim.py  utils.py
backend/: .dockerignore  Dockerfile  README.md  __init__.py  agents.py
backend/adk/assembly/: endpoints.py  pipeline.py  run.py
backend/llm/: __init__.py  gemma_pipeline.py  hf_runner.py
backend/prompts/: cfe_combination.jinja2  clarifying_questions.jinja2  cqs_variant1.jinja2  intent_classification.jinja2  rec_base.jinja2  rec_baseline.jinja2  rec_with_context.jinja2
backend/schema/: cfe.py  cqGen.py  intentClassifier.py  recSys.py  schema.py
backend/server/: api.py  endpoints.py
database/: __init__.py  base_store.py  config.py  conversation_store.py  firebase_init.py  firestore_store.py  hf_store.py  memory_store.py  session_store.py
frontend/: __init__.py  app.py  feedback_questions.json  helpers.py
middleware/: __init__.py  clarification_handler.py  orchestrator.py
prompts/: clarifying_questions.jinja2
public/: custom.css  custom.js  filtered_queries.json
utils/: __init__.py  clarification_export.py  firestore_utils.py  training_data_export.py
(+19 files in other folders)
